--- a/view/register.html
+++ b/view/register.html
@@ -52,7 +52,7 @@
             <tr><td><br></td></tr>
             <tr>
                 <td>Repeat Password:</td>
-                <td><input type="password" required id="repass" style="width: 50%;"></td>
+                <td><input type="password" required id="repass" name="repass" style="width: 50%;"></td>
             </tr>
             <tr><td><br></td></tr>
             <tr>
