gitignore added, cars added

--- a/view/pageNotFound.html
+++ b/view/pageNotFound.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Page not found</title>
 </head>
 <body>
-$END$
+<h2 style="background-color: red">Sorry, page not found!</h2>
 </body>
 </html>
