--- a/Style/style.css
+++ b/Style/style.css
@@ -136,4 +136,47 @@ footer {
     transform: translate(-50%, -50%);
 }
 
+#mainHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    height: 10vh;
+    background-color: white;
+    margin-left: 10%;
+    text-align: center;
+}
 
+#mainInMain {
+    width: 80%;
+    height: 79vh;
+    background-color: cornflowerblue;
+    margin-left: 10%;
+}
+
+#mainName {
+    text-align: left;
+    font-size: 4vw;
+    color: black;
+    font-weight: bold;
+    float: left;
+}
+
+#mainLinks {
+    text-align: right;
+    font-size: 1.5vw;
+    color: black;
+    font-weight: bold;
+}
+
+#mainCover {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#addTravel {
+    background-color: orange;
+    border-radius: 15px;
+    font-size: 2vw;
+}
