--- a/Style/style.css
+++ b/Style/style.css
@@ -180,3 +180,14 @@ footer {
     border-radius: 15px;
     font-size: 2vw;
 }
+
+#mainFooter {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    height: 30vh;
+    background-color: white;
+    margin-left: 10%;
+    text-align: center;;
+}
