--- a/view/register.html
+++ b/view/register.html
@@ -62,8 +62,13 @@
         </table>
     </form>
 </main>
-<footer>
-
+<footer id="mainFooter">
+    <h3 style="font-size: 30px;float:left;margin-left:55px;">You can always go nastop!</h3>
+    <h3 style="font-size: 20px;float:left; margin-left:25px;">Nastop.bg е място, където се срещат шофьори със свободни места и желаещи да пътуват.
+        Вие сте шофьор: Не плащайте сам цялото гориво! Споделете този разход с други хора!
+        Желате да пътувате: Возете се удобно в кола на по-ниска цена от билет за автобус.</h3>
+    <img src="https://prevozvalnik.bg/img/bulgaria-footer.png" style="margin-right: 25px">
+    <h3 style="font-size: 15px;margin-right:55px;">Copyright 2019 © Nastop.bg</h3>
 </footer>
 
 <script>
