--- a/view/history.html
+++ b/view/history.html
@@ -6,26 +6,24 @@
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <body>
-<header id="logHeader">
-    <h1>Welcome</h1>
+<header class="navHeader">
+    <h1 class="smallHeader">Nastop.bg</h1>
+    <div id="nav">
+        <ul>
+            <li><a href="home.php">Home</a></li>
+            <li><a href="profile.php">My Profile</a></li>
+            <li><a class="active" href="history.html">My Shared Travels</a></li>
+            <li><a href="edit.php">Edit Profile</a></li>
+            <li><a href="addCar.html">Add a Car</a></li>
+            <li style="float:right"><a href="../index.php?target=User&action=logout">Log out</a></li>
+            <!--TODO FIX LOGOUT !-->
+        </ul>
+    </div>
+    <img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="100%" height="150px;">
 </header>
+<!--TODO TABLE WITH MY TRAVELS !-->
 <main id="logMain">
-    <form action="../index.php?target=User&action=login" method="post">
-        <table id="loginTable">
-            <tr>
-                <td>Username:</td>
-                <td><input type="text" name="username" required></td>
-            </tr>
-            <tr>
-                <td>Password:</td>
-                <td><input type="password" name="password" required></td>
-            </tr>
-            <tr>
-                <td><a href="register.html"><input type="button" name="submit" id="register" value="Register"></a></td>
-                <td><input type="submit" name="logButton" id="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
+
 </main>
 <footer id="mainFooter">
     <h3 style="font-size: 30px;float:left;margin-left:55px;">You can always go nastop!</h3>
