--- a/Style/style.css
+++ b/Style/style.css
@@ -100,7 +100,7 @@ main {
 #logMain {
     width: 80%;
     height: 83vh;
-    background-color: cornflowerblue;
+    background-color: #2dcecb;
     margin-left: 10%;
 }
 
@@ -127,7 +127,7 @@ footer {
     text-align: center;
     width: 20%;
     height: 20vh;
-    background-color: cadetblue;
+    background-color: #f2a22b;
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
@@ -224,7 +224,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    background-color: #1c7f2a;
+    background-color: #f2a22b;
 
 }
 #nav{
@@ -235,7 +235,7 @@ li a:hover:not(.active) {
 .navHeader {
     width: 80%;
     height: 6.8vh;
-    background-color: cadetblue;
+    background-color: #2dcecb;
     margin-left: 10%;
     text-align: center;
 }
