--- a/view/addCar.html
+++ b/view/addCar.html
@@ -15,6 +15,7 @@
             <li><a href="history.html">My Shared Travels</a></li>
             <li><a href="edit.php">Edit Profile</a></li>
             <li><a class="active" href="addCar.html">Add a Car</a></li>
+            <li><a href="addTravel.html">Add a Travel</a></li>
             <li style="float:right"><a href="../index.php?target=User&action=logout">Log out</a></li>
             <!--TODO FIX LOGOUT EVERYWHERE!-->
         </ul>
