Edited adding a travel

--- a/view/addTravel.html
+++ b/view/addTravel.html
@@ -25,11 +25,11 @@
 
 <main id="logMain">
 
-    <form action="../index.php?target=Travel&action=add" method="post" enctype="multipart/form-data">
+    <form action="../index.php?target=Travel&action=add" method="post">
         <table id="loginTable">
             <tr>
                 <td>Start:</td>
-                <td><input type="text" name="start_destination" required></td>
+                <td><input type="text" name="starting_destination" required></td>
             </tr>
             <tr>
                 <td>Final:</td>
