--- a/view/history.html
+++ b/view/history.html
@@ -35,4 +35,10 @@
     <h3 style="font-size: 15px;margin-right:55px;">Copyright 2019 © Nastop.bg</h3>
 </footer>
 </body>
+<script>
+
+
+
+</script>
+
 </html>
