--- a/Style/style.css
+++ b/Style/style.css
@@ -151,7 +151,7 @@ footer {
 #mainInMain {
     width: 80%;
     height: 79vh;
-    background-color: cornflowerblue;
+    background-color: #2dcecb;
     margin-left: 10%;
 }
 
