--- a/view/addTravel.html
+++ b/view/addTravel.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="home.php">Home</a></li>
             <li><a href="profile.php">My Profile</a></li>
-            <li><a href="history.html">My Shared Travels</a></li>
+            <li><a href="history.php">My Shared Travels</a></li>
             <li><a href="edit.php">Edit Profile</a></li>
             <li><a href="addCar.html">Add a Car</a></li>
             <li><a class="active" href="addTravel.html">Add a Travel</a></li>
