--- a/Style/style.css
+++ b/Style/style.css
@@ -261,3 +261,14 @@ li a:hover:not(.active) {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
+#comments {
+    width: 30%;
+    height: 10vh;
+    background-color: white;
+    margin-left:25%;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+}
