--- a/Style/style.css
+++ b/Style/style.css
@@ -262,13 +262,9 @@ li a:hover:not(.active) {
     transform: translate(-50%, -50%);
 }
 
-#comments {
-    width: 30%;
-    height: 10vh;
-    background-color: white;
-    margin-left:25%;
-    border: 1px solid black;
+#comment {
+    margin-left:35%;
     position: absolute;
-    bottom: 0;
+    margin-top: 29%;
     text-align: center;
 }
