--- a/view/addCar.html
+++ b/view/addCar.html
@@ -15,7 +15,7 @@
             <li><a href="history.php">My Shared Travels</a></li>
             <li><a href="edit.php">Edit Profile</a></li>
             <li><a class="active" href="addCar.html">Add a Car</a></li>
-            <li><a href="addTravel.html">Add a Travel</a></li>
+            <li><a href="addTravel.php">Add a Travel</a></li>
             <li style="float:right"><a href="../index.php?target=User&action=logout">Log out</a></li>
             <!--TODO FIX LOGOUT EVERYWHERE!-->
         </ul>
@@ -56,5 +56,6 @@
     <img src="https://prevozvalnik.bg/img/bulgaria-footer.png" style="margin-right: 25px">
     <h3 style="font-size: 15px;margin-right:55px;">Copyright 2019 © Nastop.bg</h3>
 </footer>
+
 </body>
 </html>
