BIG UPDATE - front controller connected

--- a/Style/style.css
+++ b/Style/style.css
@@ -93,7 +93,7 @@ main {
 #regMain {
     width: 80%;
     height: 79vh;
-    background-color: cornflowerblue;
+    background-color: #2dcecb;
     margin-left: 10%;
 }
 
@@ -246,20 +246,6 @@ li a:hover:not(.active) {
     color: black;
     font-weight: bold;
     float: left;
-}
-
-#proTable{
-    text-align: center;
-    width: 20%;
-    height: 20vh;
-    background-color: #f2a22b;
-    margin: auto;
-    font-size: 1.5vw;
-    position: absolute;
-    top: 52.3%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
 }
 
 #comment {
