Car select fixed

--- a/view/addCar.html
+++ b/view/addCar.html
@@ -23,7 +23,7 @@
 </header>
 
 <main id="logMain">
-    <form action="../index.php?target=Car&action=add" method="post" enctype="multipart/form-data">
+    <form action="index.php?target=Car&action=add" method="post" enctype="multipart/form-data">
         <table id="loginTable">
             <tr>
                 <td>Brand:</td>
