--- a/view/login.html
+++ b/view/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>nastop</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="../Style/style.css">
 </head>
 <body>
 <header id="logHeader">
