style rework + functionality fixed

--- a/view/addCar.html
+++ b/view/addCar.html
@@ -24,7 +24,7 @@
 
 <main id="logMain">
     <form action="index.php?target=Car&action=add" method="post" enctype="multipart/form-data">
-        <table id="loginTable">
+        <table id="carTable">
             <tr>
                 <td>Brand:</td>
                 <td><input type="text" name="brand" required></td>
