--- a/view/register.html
+++ b/view/register.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <body>
-<header id="regHeader">
-    <h1>Registration</h1>
+<!--<header id="regHeader">-->
+    <!--<h1>Registration</h1>-->
+<!--</header>-->
+<header id="mainHeader">
+    <h1 id="mainName">Nastop.bg</h1>
+    <div id="mainLinks">
+        <a href="login.html">Login</a>
+        |
+        <a href="register.html">Register</a>
+        <a href="register.html"><span id="addTravel">
+            &nbsp+ Wanna share a travel?
+        </span></a>
+    </div>
 </header>
 <main id="regMain">
     <form action="../index.php?target=User&action=register" method="post" onsubmit="return passValid()" enctype="multipart/form-data">
