--- a/view/login.html
+++ b/view/login.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>nastop</title>
-    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
 <!--<header id="logHeader">-->
     <!--<h1>Welcome</h1>-->
 <!--</header>-->
 <header id="mainHeader">
-    <h1 id="mainName">Nastop.bg</h1>
+    <a href="index.php"><h1 id="mainName">Nastop.bg</h1></a>
     <div id="mainLinks">
-        <a href="login.html">Login</a>
+        <a href="index.php?target=User&action=viewLogin">Login</a>
         |
-        <a href="register.html">Register</a>
-        <a href="register.html"><span id="addTravel">
+        <a href="index.php?target=User&action=viewRegister">Register</a>
+        <a href="index.php?target=User&action=viewRegister"><span id="addTravel">
             &nbsp+ Wanna share a travel?
         </span></a>
     </div>
 </header>
 <main id="logMain">
-    <form action="../index.php?target=User&action=login" method="post">
+    <form action="index.php?target=User&action=login" method="post">
         <table id="loginTable">
             <tr>
                 <td>Username:</td>
