--- a/view/addCar.html
+++ b/view/addCar.html
@@ -22,7 +22,7 @@
     <img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="100%" height="150px;">
 </header>
 
-<main id="logMain">
+<main id="viewMain">
     <form action="index.php?target=Car&action=add" method="post" enctype="multipart/form-data">
         <table id="carTable">
             <tr>
