--- a/Style/style.css
+++ b/Style/style.css
@@ -445,3 +445,44 @@ img {
     background-color: #2dcecb;
     margin-left: 10%;
 }
+
+#book {
+    border-radius: 20%;
+    border: 3px solid black;
+
+    display: inline-block;
+    padding: 1px 15px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    font-weight: bold;
+    background-color: dodgerblue;
+    box-shadow: 0 9px #999;
+}
+
+#book:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#book:active {
+    background-color: #f2a22b;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+
+#no_book {
+    opacity: 0.5;
+    cursor: not-allowed;
+
+    border-radius: 20%;
+
+    display: inline-block;
+    padding: 1px 15px;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    font-weight: bold;
+    background-color: dodgerblue;
+    box-shadow: 0 9px #999;
+}
