--- a/view/register.html
+++ b/view/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>nastop</title>
     <link rel="stylesheet" href="../Style/style.css">
-</head>
+</head>-
 <body>
 <header id="regHeader">
     <h1>Registration</h1>
