--- a/style/style.css
+++ b/style/style.css
@@ -271,10 +271,10 @@ li a:hover:not(.active) {
     float: left;
 }
 
-#comment {
-    margin-left: 28%;
-    position: absolute;
-    margin-top: 7%;
+#comment-section {
+    width: 100%;
+    height: 20%;
+    margin: auto;
     text-align: center;
 }
 
@@ -485,4 +485,35 @@ img {
     font-weight: bold;
     background-color: dodgerblue;
     box-shadow: 0 9px #999;
+}
+
+#commentShow {
+    font-size: 1vw;
+    /*margin-left: -12.5%;*/
+    margin: auto;
+    width: 85%;
+    /*border: 3px solid black;*/
+    padding: 10px;
+    border-collapse: separate;
+    border-spacing: 50px 0;
+}
+
+#commentShow tr, td,th {
+    text-align: center;
+    padding: 8px;
+}
+
+#commentShow th {
+    color: black;
+    font-weight: bold;
+    font-size: 2vw;
+}
+
+#commentShow td {
+    padding: 10px 0;
+}
+
+#commentScroll {
+    height: 25vh;
+    overflow-y : scroll;
 }
