--- a/view/pageNotFound.html
+++ b/view/pageNotFound.html
@@ -5,6 +5,25 @@
     <title>Page not found</title>
 </head>
 <body>
-<h2 style="background-color: red">Sorry, page not found!</h2>
+<div>
+    <h1 style="background-color: #EF4836;
+   color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  height: 55px;
+  text-align: center;
+  border: 5px solid black;
+  border-radius: 15px;
+  padding-top: 8px;">Sorry, page NOT found !</h1>
+    <img style="  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+  height: 550px;
+  border: 5px solid black;
+  border-radius: 15px"
+         src="https://www.lifewire.com/thmb/OO7CD06NAdoIwv71DgUgBiTd4ps=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/shutterstock_325494917-5a68d8403418c600190a3e1f.jpg">
+</div>
 </body>
 </html>
