viewProfilUser->isset variable, pageNotFound->button back and style

--- a/view/pageNotFound.html
+++ b/view/pageNotFound.html
@@ -2,28 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style/style.css">
     <title>Page not found</title>
 </head>
 <body>
 <div>
-    <h1 style="background-color: #EF4836;
-   color: white;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-  height: 55px;
-  text-align: center;
-  border: 5px solid black;
-  border-radius: 15px;
-  padding-top: 8px;">Sorry, page NOT found !</h1>
-    <img style="  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 65%;
-  height: 550px;
-  border: 5px solid black;
-  border-radius: 15px"
-         src="https://www.lifewire.com/thmb/OO7CD06NAdoIwv71DgUgBiTd4ps=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/shutterstock_325494917-5a68d8403418c600190a3e1f.jpg">
+    <h1 class="error">Sorry, page NOT found !</h1>
+    <img id ="error_image" src="https://www.lifewire.com/thmb/OO7CD06NAdoIwv71DgUgBiTd4ps=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/shutterstock_325494917-5a68d8403418c600190a3e1f.jpg">
+<h1 class="error"><a href="index.php?target=User&action=logout">Back to Homepage</a></h1>
+
+
 </div>
+
+
+
 </body>
 </html>
+
+
