--- a/style/style.css
+++ b/style/style.css
@@ -517,3 +517,31 @@ img {
     height: 25vh;
     overflow-y : scroll;
 }
+
+.error{
+    background-color: #EF4836;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: 55px;
+    text-align: center;
+    border: 5px solid black;
+    border-radius: 15px;
+    padding-top: 8px;
+    font-size: 3em;
+}
+
+.error a {
+    color: white;
+}
+
+#error_image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: 75vh;
+    border: 5px solid black;
+    border-radius: 15px;
+}
