--- a/style/style.css
+++ b/style/style.css
@@ -545,3 +545,16 @@ img {
     border: 5px solid black;
     border-radius: 15px;
 }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    text-align: center;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    text-align: center;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    text-align: center;
+}
+:-moz-placeholder { /* Firefox 18- */
+    text-align: center;
+}
