--- a/view/login.html
+++ b/view/login.html
@@ -20,7 +20,7 @@
         </span></a>
     </div>
 </header>
-<main id="logMain">
+<main id="loginMain">
     <form action="index.php?target=User&action=login" method="post">
         <table id="loginTable">
             <tr>
