img added - login,reg

--- a/view/login.html
+++ b/view/login.html
@@ -20,9 +20,10 @@
         </span></a>
     </div>
 </header>
+<img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="80%" height="250px;">
 <main id="loginMain">
     <form action="index.php?target=User&action=login" method="post">
-        <table id="loginTable">
+        <table id="loginTable" style="top: 55%;">
             <tr>
                 <td>Username:</td>
                 <td><input type="text" name="username" required></td>
