--- a/style/style.css
+++ b/style/style.css
@@ -106,7 +106,7 @@ main {
 
 #loginMain {
     width: 80%;
-    height: 80vh;
+    height: 59vh;
     background-color: #2dcecb;
     margin-left: 10%;
 }
@@ -352,13 +352,13 @@ img {
 #carTable {
     text-align: center;
     width: 20%;
-    /*height: 20vh;*/
+    height: 20vh;
     background-color: #f2a22b;
     border-radius: 3%;
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
-    /*top: 50%;*/
+    top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
