--- a/view/register.html
+++ b/view/register.html
@@ -20,9 +20,10 @@
         </span></a>
     </div>
 </header>
-<main id="regMain">
+<img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="80%" height="250px;">
+<main id="regMain" style="height: 69vh;">
     <form action="index.php?target=User&action=register" method="post" onsubmit="return regValidation()" enctype="multipart/form-data">
-        <table id="regTable">
+        <table id="regTable" style="top: 70%;">
             <tr>
                 <td>Username:</td>
                 <td><input type="text" required name="username" style="width: 50%;"></td>
