--- a/view/addCar.html
+++ b/view/addCar.html
@@ -23,7 +23,7 @@
 <img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="80%" height="150px;">
 
 <main id="viewMain">
-    <form action="index.php?target=Car&action=add" method="post" enctype="multipart/form-data">
+    <form action="index.php?target=Car&action=add" method="post" enctype="multipart/form-data" onsubmit="return carValidate()">
         <table id="carTable">
             <tr>
                 <td>Brand:</td>
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td>Places:</td>
-                <td><input type="number" name="car_places" required></td>
+                <td><input type="number" name="car_places" id="car_places" required></td>
             </tr>
             <tr>
                 <td>Image:</td>
@@ -55,6 +55,23 @@
     <img src="https://prevozvalnik.bg/img/bulgaria-footer.png" style="margin-right: 25px">
     <h3 style="font-size: 15px;margin-right:55px;">Copyright 2019 © Nastop.bg</h3>
 </footer>
+
+<script>
+
+    function carValidate(){
+        places = document.getElementById("car_places").value;
+        if (places > 32) {
+            alert("Places limit is 32!");
+            return false;
+        }
+        if(places <= 0){
+            alert("Places must be positive number!");
+            return false;
+        }
+        else return true;
+    }
+
+</script>
 
 </body>
 </html>
