--- a/view/pageNotFound.html
+++ b/view/pageNotFound.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Page not found</title>
 </head>
 <body>
