--- a/style/style.css
+++ b/style/style.css
@@ -157,7 +157,7 @@ footer {
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -181,7 +181,8 @@ footer {
 #mainInMain {
     width: 80%;
     height: 79vh;
-    background-color: #2dcecb;
+    background: #7C6D70;
+    /*background-color: #2dcecb;*/
     margin-left: 10%;
 }
 
@@ -207,7 +208,7 @@ footer {
 }
 
 #addTravel {
-    background-color: orange;
+    background-color: #ffae1c;
     border-radius: 15px;
     font-size: 2vw;
 }
@@ -258,14 +259,14 @@ li a:hover:not(.active) {
 
 }
 #nav{
-    width: 52%;
+    width: 63%;
     float: right;
 }
 
 .navHeader {
     width: 80%;
     height: 6.8vh;
-    background-color: #2dcecb;
+    background-color: #60C9DF;
     margin-left: 10%;
     text-align: center;
 }
@@ -340,7 +341,7 @@ img {
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
-    top: 57%;
+    top: 68.5%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -358,7 +359,7 @@ img {
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
-    top: 50%;
+    top:55%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -377,7 +378,7 @@ img {
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
-    top: 50%;
+    top: 63%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -416,16 +417,18 @@ img {
 #infoButton {
     border-radius: 40%;
     border: 2px solid black;
-
     display: inline-block;
-    padding: 5px 35px;
+    padding: 5px;
     cursor: pointer;
-    text-align: center;
     text-decoration: none;
     outline: none;
     font-weight: bold;
-    background-color: dodgerblue;
+    background-color: #ffba1c;
     box-shadow: 0 9px #999;
+    width: 34%;
+    font-size: 0.5em;
+    vertical-align: middle;
+    text-align: center;
 }
 
 #infoButton:hover {
@@ -623,6 +626,7 @@ hr {
     padding: 0 16px !important
 }
 
+
 .search-panel h1 {
     margin: 0 0 10px;
     color: #fff;
@@ -668,13 +672,13 @@ hr {
 
 .search-panel .container .question {
     position: absolute;
-    right: 10%;
-    top: 25%;
+    right: 11%;
+    top: 15%;
 }
 
 .search-panel .container .question p {
     line-height: 1.1em;
-    color: #666;
+    color: darkslategrey;
     font-size: 15px;
     max-width: 260px;
     display: inline-block;
@@ -1220,3 +1224,33 @@ li {
     overflow: hidden;
 }
 
+#mainDiv {
+    border: 2px solid black;
+    border-radius: 15px;
+    width: 26%;
+    text-align: center;
+    display: inline-block;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 10px;
+    margin-left: 2.3%;
+    margin-bottom: 2.3%;
+    margin-right: 2.3% ;
+    background:  #E8D3A8;
+}
+
+#mainSpan {
+    font-size: 30px;
+    text-shadow: 1px 1px lightgray;
+    text-align: center;
+    font-weight: bold;
+    border: 2px solid #ffba1c;
+    background: #E8D3A8;
+    /*margin: auto;*/
+    border-radius: 15px;
+    margin-left: 33%;
+    margin-bottom: 1%;
+    padding: 4px;
+    display: table;
+}
