--- a/view/addCar.html
+++ b/view/addCar.html
@@ -23,6 +23,8 @@
 <img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="80%" height="150px;">
 
 <main id="viewMain">
+    <br>
+    <span id="mainSpan" style="margin-left: 42%">&nbsp Add your car:&nbsp</span>
     <form action="index.php?target=Car&action=add" method="post" enctype="multipart/form-data" onsubmit="return carValidate()">
         <table id="carTable">
             <tr>
