--- a/style/style.css
+++ b/style/style.css
@@ -92,39 +92,43 @@ main {
 
 #regMain {
     width: 80%;
-    height: 80vh;
-    background-color: #2dcecb;
+    height: 120vh;
+    background-color: #7C6D70;
     margin-left: 10%;
 }
 
 #logMain {
     width: 80%;
     height: 120vh;
-    background-color: #2dcecb;
+    background-color: #7C6D70;
     margin-left: 10%;
 }
 
 #loginMain {
     width: 80%;
     height: 59vh;
-    background-color: #2dcecb;
+    background-color: #7C6D70;
     margin-left: 10%;
+    padding-top: 2%;
 }
 
 #editMain {
     width: 80%;
     height: 70vh;
-    background-color: #2dcecb;
+    background-color: #7C6D70;
     margin-left: 10%;
 }
 
 #regTable {
+    font-weight: bold;
+    margin-top: 7%;
     text-align: center;
     width: 50%;
     height: 20vh;
     background-color: #f2a22b;
     border-radius: 3%;
-    margin: auto;
+    border: 2px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
     font-size: 1.5vw;
     position: absolute;
     top: 45%;
@@ -149,15 +153,17 @@ footer {
 }
 
 #loginTable {
+    border: 2px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
     text-align: center;
     width: 20%;
     height: 20vh;
     background-color: #f2a22b;
-    border-radius: 3%;
-    margin: auto;
+    border-radius: 6%;
+    font-weight: bold;
     font-size: 1.5vw;
     position: absolute;
-    top: 50%;
+    margin-top: 7%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -291,6 +297,8 @@ li a:hover:not(.active) {
     transition: 0.3s;
     border-radius: 5px;
     background-color: #f2a22b;
+    padding-top:10px;
+    padding-left:10px ;
 }
 
 .card img {
@@ -337,7 +345,7 @@ img {
     width: 50%;
     height: 20vh;
     background-color: #f2a22b;
-    border-radius: 3%;
+    /*border-radius: 3%;*/
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
@@ -345,17 +353,30 @@ img {
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
+    font-weight: bold;
+
 }
 #editTable td,th,tr {
     text-align: center;
 }
 
 #carTable {
+    /*border: 2px solid black;*/
+    /*border-radius: 15px;*/
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);*/
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
+
+    font-weight: bold;
     text-align: center;
     width: 20%;
     height: 20vh;
     background-color: #f2a22b;
-    border-radius: 3%;
+    /*border-radius: 3%;*/
     margin: auto;
     font-size: 1.5vw;
     position: absolute;
@@ -370,6 +391,10 @@ img {
 }
 
 #travelTable {
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
+    font-weight: bold;
     text-align: center;
     width: 20%;
     height: 20vh;
@@ -389,6 +414,7 @@ img {
 }
 
 #carShow {
+    background: #7C6D70;
     font-size: 2.5vw;
     /*margin-left: -12.5%;*/
     margin: auto;
@@ -452,7 +478,7 @@ img {
 #viewMain {
     width: 80%;
     height: 70vh;
-    background-color: #2dcecb;
+    background-color: #7c6d70;
     margin-left: 10%;
 }
 
