--- a/style/style.css
+++ b/style/style.css
@@ -228,6 +228,7 @@ footer {
     height: 30vh;
     background-color: white;
     margin-left: 10%;
+    margin-top:1%;
     text-align: center;
 }
 
