--- a/view/login.html
+++ b/view/login.html
@@ -22,7 +22,7 @@
 </header>
 <img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="80%" height="250px;">
 <main id="loginMain">
-    <h1 id="mainSpan" style=" margin-left:43% "> Login here ↴</h1>
+    <h1 id="mainSpan" style=" margin-left:43% "> Login here</h1>
     <form action="index.php?target=User&action=login" method="post">
         <table id="loginTable" style="top: 55%;">
             <tr>
