--- a/style/style.css
+++ b/style/style.css
@@ -125,7 +125,7 @@ main {
     text-align: center;
     width: 50%;
     height: 20vh;
-    background-color: #f2a22b;
+    background-color: #E8D3A8;
     border-radius: 3%;
     border: 2px solid black;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 9px 30px 0 rgba(0, 0, 0, 0.56);
@@ -158,7 +158,7 @@ footer {
     text-align: center;
     width: 20%;
     height: 20vh;
-    background-color: #f2a22b;
+    background-color: #E8D3A8;
     border-radius: 6%;
     font-weight: bold;
     font-size: 1.5vw;
