--- a/view/register.html
+++ b/view/register.html
@@ -21,10 +21,11 @@
     </div>
 </header>
 <img id="mainCover" src="https://static1.squarespace.com/static/55c1d8bce4b081fdca9dc5fd/t/573c76938259b5b384b45f7e/1463580310514/Individuals.jpg?format=1500w" width="80%" height="250px;">
-<main id="regMain" style="height: 75vh;">
-    <h1 id="mainSpan" style=" margin-left:32%; width:40%"> Register here</h1>
+<main id="regMain" style="height: 80vh;">
+    <br><br>
+    <h1 id="mainSpan" style=" margin-left:32%; width:40%; "> Register here</h1>
     <form action="index.php?target=User&action=register" method="post" onsubmit="return regValidation()" enctype="multipart/form-data">
-        <table id="regTable" style="top: 70%;">
+        <table id="regTable" style="top: 75%;">
             <tr>
                 <td>Username:</td>
                 <td><input type="text" required name="username" style="width: 50%;"></td>
