--- a/view/register.html
+++ b/view/register.html
@@ -5,7 +5,7 @@
     <title>nastop</title>
     <link rel="stylesheet" href="Style/style.css">
 </head>
-<body>
+<body onload="setTimeout(scrollTo,210)">
 <!--<header id="regHeader">-->
     <!--<h1>Registration</h1>-->
 <!--</header>-->
@@ -86,6 +86,10 @@
 </footer>
 
 <script>
+
+    function scrollTo(){
+        document.getElementById('regMain').scrollIntoView({block: 'start', behavior: 'smooth'});
+    }
 
     function ageValid(){
         var age;
