href fixed in log/reg

--- a/view/register.html
+++ b/view/register.html
@@ -70,7 +70,7 @@
                 <td><input type="file" required name="pic" style="width: 50%;"></td>
             </tr>
             <tr>
-                <td><a href="login.html"><input type="button" name="submit" id="login" value="Login"></a></td>
+                <td><a href="index.php?target=User&action=viewLogin"><input type="button" name="submit" id="login" value="Login"></a></td>
                 <td><input type="submit" id="regButton" name="regButton" value="Register"></td>
             </tr>
         </table>
