--- a/view/login.html
+++ b/view/login.html
@@ -34,7 +34,7 @@
                 <td><input type="password" name="password" required></td>
             </tr>
             <tr>
-                <td><a href="register.html"><input type="button" name="submit" id="register" value="Register"></a></td>
+                <td><a href="index.php?target=User&action=viewRegister"><input type="button" name="submit" id="register" value="Register"></a></td>
                 <td><input type="submit" name="logButton" id="submit" value="Login"></td>
             </tr>
         </table>
