--- a/view/login.html
+++ b/view/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>nastop</title>
     <link rel="stylesheet" href="Style/style.css">
+    <link rel="icon" href="http://pngimg.com/uploads/road/road_PNG48.png">
 </head>
 <body>
 <!--<header id="logHeader">-->
