--- a/view/pageNotFound.html
+++ b/view/pageNotFound.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="http://pngimg.com/uploads/road/road_PNG48.png">
     <title>Page not found</title>
 </head>
 <body>
