--- a/view/errorPage.html
+++ b/view/errorPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Error Page</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="http://pngimg.com/uploads/road/road_PNG48.png">
 </head>
 <body>
 <h1 class="error">Sorry, maybe your data are invalid! Try again!</h1>
